[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "business-bridge-mcp-server"
version = "0.1.0"
description = "MCP Server with pre-built connectors for Shopify, WordPress, Calendly and other business platforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AiAgentKarl"}]
keywords = ["mcp", "shopify", "wordpress", "calendly", "business", "connectors"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/business-bridge-mcp-server"
Repository = "https://github.com/AiAgentKarl/business-bridge-mcp-server"
Issues = "https://github.com/AiAgentKarl/business-bridge-mcp-server/issues"

[project.scripts]
business-bridge = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
